--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <link rel="stylesheet" type="text/css" href="style.css"/>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Jacquarda+Bastarda+9&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Sans+JP:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Haak</title>
+      <link rel="stylesheet" href="style.css"/>
     </head>
+
     <body>
-        <div class = "center">
-            <h1 class="spawn">Maximilian Haak.</h1>
-            <h2 class="spawn2">Software-Entwickler</h2>
+        <div class="center">
+            <h2>Servus, ich bin</h2>
+            <h1>Maximilian Haak</h1>
+        </div>
+
+        <div class="center aboutme">
+            <div class="box">
+                <h3>About Me</h3>
+                <p>Anfang</p>
+            </div>
         </div>
     </body>
 </html>
